--- a/app/sass/components/_room.scss
+++ b/app/sass/components/_room.scss
@@ -36,6 +36,8 @@
 		&__mark{border-color: #fff;}
 		&__mark::after{background: #fff;}
 	}
+
+	.form-date{box-shadow: 0px 9px 26px rgba(0, 0, 0, 0.08);}
 }
 
 .room-head{
@@ -84,6 +86,7 @@
 	&__switch-text{
 		@include font(normal, normal, 1.125rem, 1.3, $color-blue);
 		position: relative;
+		cursor: pointer;
 	}
 
 	&__switch-text::after{
@@ -172,12 +175,12 @@
 			@include font(normal, 300, 1.0625rem, 4.0625rem, $color-text);
 			padding: 0 28px;
 			margin: 0;
-			box-shadow: none;
+			box-shadow: 0px 9px 26px rgba(0, 0, 0, 0.08);
 		}
 
 		input[type="text"]:focus,
 		input[type="email"]:focus{
-			box-shadow: none;
+			box-shadow: 0px 9px 26px rgba(0, 0, 0, 0.08);
 		}
 
 		input[type="text"]::placeholder,
