--- a/app/sass/components/_select.scss
+++ b/app/sass/components/_select.scss
@@ -7,6 +7,7 @@
 	cursor: pointer;
 	background: #fff;
 	border-radius: 5px;
+	box-shadow: 0px 9px 26px rgba(0, 0, 0, 0.08);
 
 	&__label{
 		@include font(normal, 300, 0.9375rem, 1.3, #929292);
