--- a/app/sass/components/_advant.scss
+++ b/app/sass/components/_advant.scss
@@ -1,6 +1,6 @@
 /*-------------- advant -----------------*/
 .advant-wrap{
-	padding: 70px 0 50px;
+	padding: 70px 0 40px;
 
 	h2,
 	.h2{
@@ -18,6 +18,7 @@
 .advant{
 	display: flex;
 	justify-content: space-between;
+	flex-wrap: wrap;
 	margin-left: -15px;
 	margin-right: -15px;
 
@@ -25,7 +26,7 @@
 		display: flex;
 		align-items: center;
 		max-width: 330px;
-		margin: 0 15px 20px;
+		margin: 0 15px 30px;
 	}
 
 	&__icon{
@@ -44,5 +45,25 @@
 	&__text{
 		@include font(normal, normal, 1rem, 1.3, #929292);
 		margin-top: 5px;
+	}
+}
+
+@media (max-width: 1299px) {
+	.advant{
+		&__item{width: calc(33.33% - 30px);}
+	}
+}
+
+@media (max-width: 991px) {
+	.advant{
+		&__item{width: calc(50% - 30px);}
+	}
+}
+
+@media (max-width: 767px) {
+	.advant-wrap{padding: 50px 0 40px;}
+
+	.advant{
+		&__item{width: calc(100% - 30px);}
 	}
 }
