--- a/app/sass/components/_booking.scss
+++ b/app/sass/components/_booking.scss
@@ -1,7 +1,7 @@
 /*-------------- booking -----------------*/
 .booking{
 	padding: 70px 0 90px;
-	background: url(#{$path-img}/bg-booking.jpg) no-repeat center;
+	background: #3155ad url(#{$path-img}/bg-booking.jpg) no-repeat center;
 	// background-attachment: fixed;
 
 	h2,
