--- a/app/template/content/index.html
+++ b/app/template/content/index.html
@@ -18,10 +18,10 @@
 						</div>
 
 						<div class="row">
-							<div class="col-5">
+							<div class="col-md-5">
 								<div class="about__img"><img src="img/about.png" alt=""></div>
 							</div>
-							<div class="col-7">
+							<div class="col-md-7">
 								<div class="about__text">Тут будет текст с описанием санатория. Мы рады пригласить Вас в одно из лучших мест в Сочи – санаторно-курортный и развлекательный комплекс. У нас Вы можете насладиться уникальной природой, пройти курс оздоровления, всей семьей посетить знаменитый всесезонный аквапарк. А уютные номера и приветливое обслуживание персонала сделают Ваш отдых максимально комфортным и незабываемым. При создании генератора мы использовали небезизвестный универсальный код речей. Текст генерируется абзацами случайным образом от двух до десяти предложений в абзаце, что позволяет сделать текст.</div>
 							</div>
 						</div>
@@ -58,7 +58,7 @@
 									</div>
 								</div>
 
-								<div style="display: none; width: 80%;" id="list-room">
+								<div style="display: none; width: 80%;" id="list-room" class="list-room-popup">
 									<div class="room-list">
 										<div class="room js-room">
 											<div class="room-head js-room-head">
@@ -672,12 +672,12 @@
 
 									<div class="profile__item">
 										<div class="profile__icon"><img src="img/profile3.svg" alt=""></div>
-										<div class="profile__text">Заболевания сердечно&#8209;сосудистой системы</div>
+										<div class="profile__text">Заболевания сердечно-сосудистой системы</div>
 									</div>
 
 									<div class="profile__item">
 										<div class="profile__icon"><img src="img/profile4.svg" alt=""></div>
-										<div class="profile__text">Заболевания опорно&#8209;двигательного аппарата</div>
+										<div class="profile__text">Заболевания опорно-двигательного аппарата</div>
 									</div>
 
 									<div class="profile__item">
