--- a/app/sass/components/_about.scss
+++ b/app/sass/components/_about.scss
@@ -17,3 +17,12 @@
 		@include font(normal, 300, 1.25rem, 1.3, $color-text);
 	}
 }
+
+@media (max-width: 767px) {
+	.about{
+		padding: 50px 0 58px;
+
+		&__img{margin-bottom: 20px;}
+		&__text{font-size: 1.14rem;}
+	}
+}
