--- a/app/sass/components/_profile.scss
+++ b/app/sass/components/_profile.scss
@@ -10,15 +10,13 @@
 
 .profile{
 	display: flex;
-	justify-content: space-between;
 	flex-wrap: wrap;
-	margin-left: -10px;
-	margin-right: -10px;
+	margin-left: -15px;
+	margin-right: -15px;
 
 	&__item{
-		max-width: 20%;
-		padding: 0 10px;
-		margin-bottom: 20px;
+		max-width: 204px;
+		margin: 0 15px 20px;
 		text-align: center;
 	}
 
@@ -31,5 +29,16 @@
 	&__text{
 		@include font(normal, normal, 1.25rem, 1.3, $color-text);
 		margin-top: 18px;
+	}
+}
+
+@media (max-width: 767px) {
+	.profile-wrap{
+		padding: 50px 0 40px;
+	}
+
+	.profile{
+		&__item{width: calc(50% - 30px);}
+		&__text{font-size: 1.2rem;}
 	}
 }
