--- a/app/sass/components/_search-hotel.scss
+++ b/app/sass/components/_search-hotel.scss
@@ -80,3 +80,23 @@
 		@include font(normal, bold, 1rem, 1.3, $color-text);
 	}
 }
+
+@media (max-width: 991px) {
+	.search-hotel{
+		&__content{display: block;}
+		&__info{margin-bottom: 10px;}
+	}
+}
+
+@media (max-width: 767px) {
+	.search-hotel{
+		&__info{text-align: center;}
+	}
+
+	.search-hotel-form{
+		display: block;
+		text-align: center;
+
+		&__field{margin-right: 0; margin-bottom: 10px;}
+	}
+}
