--- a/app/sass/components/_select.scss
+++ b/app/sass/components/_select.scss
@@ -1,6 +1,7 @@
 /*-------------- select -----------------*/
 .select-child{
 	display: inline-block;
+	width: 100%;
 	min-width: 229px;
 	padding: 14px 30px 12px 54px;
 	position: relative;
