--- a/app/sass/layout/_header.scss
+++ b/app/sass/layout/_header.scss
@@ -44,6 +44,7 @@
 		box-shadow: 0px 3px 19px rgba(0, 0, 0, 0.24);
 		border-radius: 5px;
 		@include font(normal, bold, 3.75rem, 1.3, $color-blue);
+		text-align: center;
 	}
 
 	&__address{
@@ -56,5 +57,30 @@
 
 	.btn{
 		margin-top: 48px;
+	}
+}
+
+@media (max-width: 991px) {
+	.header-info{
+		&__head{font-size: 3rem;}
+		&__address{font-size: 1.5rem;}
+	}
+}
+
+@media (max-width: 767px) {
+	.header{
+		padding: 15px 0 30px;
+		background-attachment: scroll;
+	}
+
+	.header-top{
+		&__logo{max-width: 50px;}
+		&__phone, &__phone a{font-size: 1rem;}
+	}
+
+	.header-info{
+		padding: 70px 0;
+		&__head{font-size: 2.75rem;}
+		&__address{font-size: 1.25rem;}
 	}
 }
