--- a/public/css/main.css
+++ b/public/css/main.css
@@ -274,6 +274,40 @@ button.btn_big {
   font-weight: 700 !important;
 }
 
+@media (max-width: 767px) {
+  html,
+  body {
+    font-size: 14px;
+  }
+  .container {
+    width: 100% !important;
+  }
+  .btn_big,
+  input[type="submit"].btn_big,
+  button.btn_big {
+    font-size: 1.5rem;
+    height: 4.5rem;
+    line-height: 4.5rem;
+    min-width: 260px;
+  }
+  h2, .h2 {
+    font-size: 2rem;
+  }
+  p {
+    font-size: 1.14rem;
+  }
+  .fancybox-content {
+    padding: 40px 15px 20px;
+  }
+  .fancybox-slide--image .fancybox-content {
+    max-width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+  }
+}
+
 /*-------------- Header -----------------*/
 .header {
   background: url(../img/bg-header.jpg) no-repeat center;
@@ -351,6 +385,7 @@ button.btn_big {
   font-size: 3.75rem;
   line-height: 1.3;
   color: #2857c7;
+  text-align: center;
 }
 
 .header-info__address {
@@ -367,6 +402,37 @@ button.btn_big {
 
 .header-info .btn {
   margin-top: 48px;
+}
+
+@media (max-width: 991px) {
+  .header-info__head {
+    font-size: 3rem;
+  }
+  .header-info__address {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 767px) {
+  .header {
+    padding: 15px 0 30px;
+    background-attachment: scroll;
+  }
+  .header-top__logo {
+    max-width: 50px;
+  }
+  .header-top__phone, .header-top__phone a {
+    font-size: 1rem;
+  }
+  .header-info {
+    padding: 70px 0;
+  }
+  .header-info__head {
+    font-size: 2.75rem;
+  }
+  .header-info__address {
+    font-size: 1.25rem;
+  }
 }
 
 /*-------------- Footer -----------------*/
@@ -485,10 +551,41 @@ button.btn_big {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .pay-system__item:not(:last-child) {
   margin-right: 13px;
+}
+
+@media (max-width: 767px) {
+  .footer-top__content {
+    display: block;
+  }
+  .footer-top__contact {
+    display: block;
+    margin-top: 20px;
+  }
+  .footer-top__address, .footer-top__phone {
+    margin-left: 0;
+    margin-right: 0;
+    margin-bottom: 10px;
+    text-align: left;
+  }
+  .footer-top-phone {
+    text-align: left;
+  }
+  .footer-bottom__content {
+    display: block;
+  }
+  .footer-bottom .pay-system {
+    margin-top: 20px;
+  }
+  .footer-bottom .pay-system__item {
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
 }
 
 /*-------------- search-hotel -----------------*/
@@ -604,6 +701,29 @@ button.btn_big {
   color: #000;
 }
 
+@media (max-width: 991px) {
+  .search-hotel__content {
+    display: block;
+  }
+  .search-hotel__info {
+    margin-bottom: 10px;
+  }
+}
+
+@media (max-width: 767px) {
+  .search-hotel__info {
+    text-align: center;
+  }
+  .search-hotel-form {
+    display: block;
+    text-align: center;
+  }
+  .search-hotel-form__field {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+}
+
 /*-------------- about -----------------*/
 .about {
   padding: 70px 0 58px;
@@ -626,6 +746,18 @@ button.btn_big {
   font-size: 1.25rem;
   line-height: 1.3;
   color: #000;
+}
+
+@media (max-width: 767px) {
+  .about {
+    padding: 50px 0 58px;
+  }
+  .about__img {
+    margin-bottom: 20px;
+  }
+  .about__text {
+    font-size: 1.14rem;
+  }
 }
 
 /*-------------- params -----------------*/
@@ -698,6 +830,20 @@ a.params__val:hover::after {
   border-color: #fb941c;
 }
 
+@media (max-width: 767px) {
+  .params-wrap {
+    padding: 50px 0 40px;
+  }
+  .params {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .params__item {
+    width: 50%;
+    max-width: 50%;
+  }
+}
+
 /*-------------- profile -----------------*/
 .profile-wrap {
   padding: 78px 0 53px;
@@ -712,19 +858,15 @@ a.params__val:hover::after {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-left: -10px;
-  margin-right: -10px;
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
 .profile__item {
-  max-width: 20%;
-  padding: 0 10px;
-  margin-bottom: 20px;
+  max-width: 204px;
+  margin: 0 15px 20px;
   text-align: center;
 }
 
@@ -743,6 +885,18 @@ a.params__val:hover::after {
   line-height: 1.3;
   color: #000;
   margin-top: 18px;
+}
+
+@media (max-width: 767px) {
+  .profile-wrap {
+    padding: 50px 0 40px;
+  }
+  .profile__item {
+    width: calc(50% - 30px);
+  }
+  .profile__text {
+    font-size: 1.2rem;
+  }
 }
 
 /*-------------- slick -----------------*/
@@ -934,6 +1088,18 @@ a.params__val:hover::after {
   margin-top: 12px;
 }
 
+@media (max-width: 767px) {
+  .service-wrap {
+    padding: 50px 0 40px;
+  }
+  .service-wrap h2, .service-wrap .h2 {
+    margin-bottom: 25px;
+  }
+  .service-slider__item {
+    min-height: auto;
+  }
+}
+
 /*-------------- gallery -----------------*/
 .gallery-wrap {
   padding: 65px 0 58px;
@@ -958,6 +1124,7 @@ a.params__val:hover::after {
 .gallery-slider__item {
   display: inline-block;
   margin: 20px 15px;
+  text-align: center;
 }
 
 .gallery-slider__item img {
@@ -966,9 +1133,18 @@ a.params__val:hover::after {
           box-shadow: 0px 9px 20px rgba(0, 0, 0, 0.08);
 }
 
+@media (max-width: 767px) {
+  .gallery-wrap {
+    padding: 50px 0 58px;
+  }
+  .gallery-slider__item > a {
+    display: inline-block;
+  }
+}
+
 /*-------------- advant -----------------*/
 .advant-wrap {
-  padding: 70px 0 50px;
+  padding: 70px 0 40px;
 }
 
 .advant-wrap h2,
@@ -994,6 +1170,8 @@ a.params__val:hover::after {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-left: -15px;
   margin-right: -15px;
 }
@@ -1006,7 +1184,7 @@ a.params__val:hover::after {
       -ms-flex-align: center;
           align-items: center;
   max-width: 330px;
-  margin: 0 15px 20px;
+  margin: 0 15px 30px;
 }
 
 .advant__icon {
@@ -1033,6 +1211,27 @@ a.params__val:hover::after {
   line-height: 1.3;
   color: #929292;
   margin-top: 5px;
+}
+
+@media (max-width: 1299px) {
+  .advant__item {
+    width: calc(33.33% - 30px);
+  }
+}
+
+@media (max-width: 991px) {
+  .advant__item {
+    width: calc(50% - 30px);
+  }
+}
+
+@media (max-width: 767px) {
+  .advant-wrap {
+    padding: 50px 0 40px;
+  }
+  .advant__item {
+    width: calc(100% - 30px);
+  }
 }
 
 /*-------------- input-radio -----------------*/
@@ -1340,9 +1539,6 @@ input[type=checkbox]:checked + .input-check__label .input-check__mark:after {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1361,7 +1557,7 @@ input[type=checkbox]:checked + .input-check__label .input-check__mark:after {
       -ms-flex-align: center;
           align-items: center;
   max-width: 240px;
-  margin: 0 15px 20px;
+  margin: 0 25px 20px;
 }
 
 .room-param__icon {
@@ -1454,9 +1650,87 @@ input[type=checkbox]:checked + .input-check__label .input-check__mark:after {
   margin-top: 7px;
 }
 
+.room-polit .input-check__text {
+  text-align: left;
+}
+
+@media (max-width: 991px) {
+  .room-head-price {
+    margin-right: 20px;
+  }
+  .list-room-popup {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .list-room-popup .room-fields__item {
+    width: calc(50% - 20px);
+  }
+}
+
+@media (max-width: 767px) {
+  .room-wrap {
+    padding: 50px 0;
+  }
+  .room-head {
+    padding: 20px 15px;
+  }
+  .room-head__content, .room-head__info, .room-head__action {
+    display: block;
+  }
+  .room-head__img, .room-head__name {
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+  .room-head__switch {
+    text-align: right;
+    margin-top: 20px;
+  }
+  .room-head-price {
+    margin-right: 0;
+  }
+  .room-content {
+    padding: 40px 15px 20px;
+  }
+  .room-content .gallery-slider {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+  .room-param__item {
+    max-width: 100%;
+    width: calc(50% - 30px);
+    margin: 0 15px 20px;
+  }
+  .room-fields__item {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .room-fields .btn,
+  .room-fields input[type="submit"].btn,
+  .room-fields button.btn {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .list-room-popup .room-head {
+    display: block;
+  }
+  .list-room-popup .room-fields__item {
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 479px) {
+  .room-param__item {
+    width: calc(100% - 30px);
+  }
+}
+
 /*-------------- select -----------------*/
 .select-child {
   display: inline-block;
+  width: 100%;
   min-width: 229px;
   padding: 14px 30px 12px 54px;
   position: relative;
@@ -1654,6 +1928,22 @@ input[type=checkbox]:checked + .input-check__label .input-check__mark:after {
   color: #2857c7;
 }
 
+@media (max-width: 767px) {
+  .review-wrap {
+    padding: 45px 0 60px;
+  }
+  .review-slider__item {
+    padding: 20px 15px 15px;
+  }
+  .review-slider__img {
+    margin: 0 -10px;
+  }
+  .review-slider__img img {
+    width: calc(50% - 20px);
+    margin: 10px;
+  }
+}
+
 /*-------------- form-site -----------------*/
 .form-site__content {
   display: -webkit-box;
@@ -1728,10 +2018,31 @@ input[type=checkbox]:checked + .input-check__label .input-check__mark:after {
   margin-top: 27px;
 }
 
+.form-site__polit .input-check__text {
+  text-align: left;
+}
+
+@media (max-width: 767px) {
+  .form-site__content {
+    display: block;
+  }
+  .form-site__field {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 10px;
+  }
+  .form-site .btn,
+  .form-site input[type="submit"].btn,
+  .form-site button.btn {
+    display: table;
+    margin: 0 auto;
+  }
+}
+
 /*-------------- booking -----------------*/
 .booking {
   padding: 70px 0 90px;
-  background: url(../img/bg-booking.jpg) no-repeat center;
+  background: #3155ad url(../img/bg-booking.jpg) no-repeat center;
 }
 
 .booking h2,
@@ -1754,6 +2065,7 @@ input[type=checkbox]:checked + .input-check__label .input-check__mark:after {
   font-size: 1.5625rem;
   line-height: 1.3;
   color: #484848;
+  text-align: center;
   background: rgba(255, 255, 255, 0.7);
   position: absolute;
   top: 40px;
@@ -1769,6 +2081,11 @@ input[type=checkbox]:checked + .input-check__label .input-check__mark:after {
 }
 
 @media (max-width: 767px) {
+  .map-wrap__address {
+    padding: 20px 15px;
+    font-weight: normal;
+    font-size: 1.25rem;
+  }
   .map {
     height: 300px;
   }
@@ -1865,4 +2182,21 @@ input[type=checkbox]:checked + .input-check__label .input-check__mark:after {
 
 .unwrap.opened .unwrap__switch-text::after {
   border-color: #929292;
+}
+
+@media (max-width: 767px) {
+  .unwrap__head {
+    display: block;
+    padding: 20px 15px;
+  }
+  .unwrap__name {
+    margin-right: 0;
+    margin-bottom: 5px;
+  }
+  .unwrap__switch {
+    text-align: right;
+  }
+  .unwrap__content {
+    padding: 26px 20px 15px;
+  }
 }
